package zoot.exceptions;

public class AnalyseSemantiqueException extends AnalyseException {
    public AnalyseSemantiqueException(String m) {
        super(m);
    }
}
