package zoot.exceptions;

public class AnalyseSyntaxiqueException extends AnalyseException {

    public AnalyseSyntaxiqueException(String m) {
        super("ERREUR SYNTAXIQUE :\n\t" + m);
    }

}
